tests/error_display/hll_unsafe_required.err.expected
error: at 6:11: [HTC-UnsafeRequired] In function 'test_unsafe_required': dereference of raw pointer requires unsafe block
   |
 6 |   let y = p.*;
   |           ^^^
error: at 27:3: [HTC-UnsafeRequired] In function 'call_unsafe_from_safe': call to unsafe function 'dangerous_op' requires unsafe block
    |
 27 |   dangerous_op(p);
    |   ^^^^^^^^^^^^^^^
