tests/error_display/hll_unsafe_required.si
fn test_unsafe_required() {
  let x = 42;
  let p: *i64 = &raw x;

  # 1. Error: dereference outside unsafe block
  let y = p.*;

  # 2. OK: dereference inside unsafe block
  let z = unsafe { p.* };

  # 3. OK: dereference inside nested unsafe block
  let w = unsafe {
    let p2 = p;
    p2.*
  };
}

# ---------- Unsafe Functions ----------

unsafe fn dangerous_op(ptr: *i64) -> i64 {
  # 4. OK: dereference inside unsafe fn body (bodies are considered "in unsafe")
  ptr.*
}

fn call_unsafe_from_safe(p: *i64) {
  # 5. Error: calling unsafe function outside unsafe block
  dangerous_op(p);
}

fn call_unsafe_from_unsafe(p: *i64) {
  # 6. OK: calling unsafe function inside unsafe block
  unsafe {
    dangerous_op(p);
  }
}

unsafe fn nested_unsafe_calls(p: *i64) -> i64 {
  # 7. OK: calling unsafe function inside unsafe fn body
  dangerous_op(p)
}
